# components

src/dev-app/: BUILD.bazel  index.html  main-module.ts
src/dev-app/dev-app/: dev-app-layout.ts  routes.ts
src/dev-app/mdc-top-app-bar/: BUILD.bazel  mdc-top-app-bar-demo-module.ts  mdc-top-app-bar-demo.html  mdc-top-app-bar-demo.scss  mdc-top-app-bar-demo.ts
src/dev-app/mdc-top-app-bar-example/: BUILD.bazel  mdc-top-app-bar-demo-module.ts  mdc-top-app-bar-demo.html  mdc-top-app-bar-demo.scss  mdc-top-app-bar-demo.ts
src/material-experimental/: config.bzl
src/material-experimental/mdc-theming/: BUILD.bazel  _all-theme.import.scss  _all-theme.scss
src/material-experimental/mdc-top-app-bar/: BUILD.bazel  _top-app-bar-theme.import.scss  _top-app-bar-theme.scss  module.ts  public-api.ts  top-app-bar.scss  top-app-bar.ts
src/material-experimental/mdc-typography/: _all-typography.import.scss
